tests/ui/alias_missing_cxx_vector_impl.stderr
error[E0277]: the trait bound `here::C: VectorElement` is not satisfied
  --> $DIR/alias_missing_cxx_vector_impl.rs:15:1
   |
15 | #[cxx::bridge]
   | ^^^^^^^^^^^^^^ the trait `VectorElement` is not implemented for `here::C`
   |
  ::: $WORKSPACE/src/unique_ptr.rs
   |
   |     T: UniquePtrTarget,
   |        --------------- required by this bound in `UniquePtr`
   |
   = note: required because of the requirements on the impl of `UniquePtrTarget` for `CxxVector<here::C>`

error[E0277]: the trait bound `here::Shared: VectorElement` is not satisfied
  --> $DIR/alias_missing_cxx_vector_impl.rs:15:1
   |
15 | #[cxx::bridge]
   | ^^^^^^^^^^^^^^ the trait `VectorElement` is not implemented for `here::Shared`
   |
  ::: $WORKSPACE/src/unique_ptr.rs
   |
   |     T: UniquePtrTarget,
   |        --------------- required by this bound in `UniquePtr`
   |
   = note: required because of the requirements on the impl of `UniquePtrTarget` for `CxxVector<here::Shared>`
